<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Adivinhador</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="msg">Que Começe o Jogo</string>
    <string name="msg2">Pense Em Um Numero</string>
    <string name="msg8">Mais nao fale a Ninguem</string>
    <string name="msg3">Agora Some Mais +</string>
    <string name="msg4">Some Mais 40</string>
    <string name="msg5">Agora Nenos 20</string>
    <string name="msg9">Menos 10</string>
    <string name="msg10">Bom você já</string>
    <string name="msg11">Somou</string>
    <string name="msg12">Subtraiu</string>
    <string name="msg13">Dividiu</string>
    <string name="msg6">Agora Menos o Numero que você pensou</string>
    <string name="msg7">O Resultado é </string>
    <string name="msg14">Gostou tente de Novo</string>
    <string name="msg15">Com novos Numeros</string>
    <string name="title_activity_main_activity2">Adivinhador</string>
    <string name="title_activity_main_activity3">Adivinhador</string>
    <string name="botao">OK</string>

</resources>
